[metadata]
name = yayf
summary = Yet Another YAML Formatter
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Brandon LeBlanc
author-email = brandon@leblanc.codes
license = MIT
home-page = https://github.com/demosdemon/yayf#readme
project_urls =
    Bug Tracker = https://github.com/demosdemon/yayf/issues
    Source Code = https://github.com/demosdemon/yayf
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Pre-processors
    Topic :: Text Processing :: Markup
    Topic :: Utilities
keywords =
    yaml
    formatter
    prettier
    beautifier
    style
    yet-another

[files]
packages =
    yayf

[entry_points]
console_scripts =
    yayf = yayf.cli:main

